fix table width

--- a/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
@@ -29,12 +29,13 @@ else
     <div>
         <table class="table table-striped">
             <thead>
-                <th>
+                <th style="width: 20%;">
                     <span>Sigla</span>
                 </th>
-                <th>
+                <th  style="width: 75%;">
                     <span class="">Scelta</span>
                 </th>
+                <th style="width: 5%;"></th>
             </thead>
             <tbody>
                 @for (int i = 0; i < displayedChoices.Count; i += 1)
