--- a/ConstructionSiteLibrary/Components/ConstructorSites/CardInfoConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/CardInfoConstructorSite.razor
@@ -1,4 +1,7 @@
 ﻿@using Shared.Documents
+@inject DialogService DialogService
+
+<ScreenComponent @ref="screenComponent" />
 
 <div class="card p-4">
     <div class="row mt-3">
@@ -6,7 +9,7 @@
             <h2>@ConstructorSite.Name</h2>
         </div>
         <div class="col-2 d-flex justify-content-end">
-            <RadzenButton Variant="Variant.Text" Icon="edit" class="btu-modify"></RadzenButton>
+            <RadzenButton Variant="Variant.Text" Icon="edit" class="btu-modify" Click="@OpenForm"></RadzenButton>
         </div>
     </div>
     <hr />
@@ -35,8 +38,11 @@
 @code {
 
     [Parameter]
+    public EventCallback ReloadInfo { get; set; }
+    [Parameter]
     public ConstructorSiteModel ConstructorSite { get; set; } = new();
 
+    ScreenComponent? screenComponent;
 
     #region Visualizzazione
 
@@ -48,6 +54,37 @@
             client = ConstructorSite.Client.Name;
         }
         return client;
+    }
+
+    #endregion
+
+    #region form
+
+    private async Task OpenForm()
+    {
+        var width = screenComponent.GetScreenSize();
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+        {
+            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+            { "OnSaveComplete", EventCallback.Factory.Create(this, Reload) },
+            { "CreationMode", false },
+            { "Site", ConstructorSite },
+        };
+        await DialogService.OpenAsync<FormConstructorSite>("Cantiere", parameters: param, options: newOptions);
+    }
+
+    private async Task Reload()
+    {
+        DialogService.Close();
+        await ReloadInfo.InvokeAsync();
     }
 
     #endregion
