--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
@@ -1,6 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Model;
 @using ConstructionSiteLibrary.Utility;
 @using ConstructionSiteLibrary.Components.Generics;
+@using ConstructionSiteLibrary.Components.Documents.Wizard;
 @using Shared.Documents;
 
 @inject ConstructorSitesRepository SiteRepository
@@ -34,7 +35,7 @@ else
         @* Bottone nuovo + ricerca *@
         <div class="row my-5">
             <div class="col-md-6 col-12 d-flex justify-content-md-start justify-content-center">
-                <RadzenButton Variant="Variant.Text" class="btu-add">
+                <RadzenButton Variant="Variant.Text" class="btu-add" Click="@DocumentCreation">
                     <i><u>+ Aggiungi documento</u></i>
                 </RadzenButton>
             </div>
@@ -54,14 +55,14 @@ else
             <Repeater Data="@displayedDocuments" TItem="DocumentModel">
                 <ContentTemplate Context="Item">
                     <div class="row row-border row-padding">
-                        <div class="col-7">
+                        <div class="col-xl-10 col-lg-8 col-md-7 col-6">
                             <p class="documentTitle text-margin">@Item.Title</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xl-1 col-lg-2 col-md-3 col-4">
                             <p class="text-margin">@PrintDate(Item.CreationDate)</p>
                         </div>
-                        <div class="col-2 d-flex justify-content-end">
-                            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-document">
+                        <div class="col-2 col-xl-1 d-flex justify-content-end">
+                            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-document" @onclick="(()=>DocumentCompilation(Item.Id))">
                                 <path d="M31.25 8.33342H12.5V41.6668H37.5V14.5834H31.25V8.33342ZM12.5 4.16675H33.3334L41.6667 12.5001V41.6668C41.6667 42.7718 41.2277 43.8316 40.4463 44.613C39.6649 45.3944 38.6051 45.8334 37.5 45.8334H12.5C11.395 45.8334 10.3352 45.3944 9.55376 44.613C8.77236 43.8316 8.33337 42.7718 8.33337 41.6668V8.33342C8.33337 7.22835 8.77236 6.16854 9.55376 5.38714C10.3352 4.60573 11.395 4.16675 12.5 4.16675ZM16.6667 22.9167H33.3334V27.0834H16.6667V22.9167ZM16.6667 31.2501H33.3334V35.4167H16.6667V31.2501Z" fill="currentColor" />
                             </svg>
                         </div>
@@ -159,6 +160,20 @@ else
     {
         iconDocumentColor = hover ? "white" : "#0C336E";
         StateHasChanged();
+    }
+
+    #endregion
+
+    #region form
+
+    private void DocumentCreation()
+    {
+        NavigationService.ChangePage(PageRouting.DocumentCreationPage + site.Id);
+    }
+
+    private void DocumentCompilation(int documentId)
+    {
+        NavigationService.ChangePage(PageRouting.DocumentCompilationPage + documentId);
     }
 
     #endregion
