--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor
@@ -11,7 +11,7 @@
 }
 else
 {
-    <RadzenTemplateForm TItem="TemplateDescriptionModel" Data="@CurrentSelection" Submit="@Forward">
+    <RadzenTemplateForm TItem="TemplateDescriptionModel" Data="@CurrentSelection">
     <div class="card shadow mb-3 divCard">
         <RadzenText>Seleziona una descrizione</RadzenText>
         <RadzenRow>
