--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
@@ -12,7 +12,7 @@
 else
 {
     <RadzenTemplateForm TItem="string" Data="@Title">
-    <div class="card shadow mb-3 divCard">
+    <div class="card round-border mb-3 divCard cardClass">
         <RadzenText>Inserisci un nome per il template</RadzenText>
         <RadzenFormField Text="Nome <span style='color:red'> (obbligatorio)</span>" Variant="@variant"
             class="formFieldTitolo">
