--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor.css
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor.css
@@ -23,7 +23,6 @@
 
 .formFieldTitolo, ::deep .formFieldTitolo {
     width: 100%;
-    padding: 0rem 1rem;
 }
 
 .margineQuestionario {
@@ -41,6 +40,13 @@
 
 .bordoDomanda {
     margin-left: 3rem !important;
+}
+
+.cardClass {
+    border-radius: 0.8rem !important;
+    background: #FFF;
+    border-color: var(--border-Card);
+    background-color: var(--card-background-color) !important;
 }
 
 @media(max-width: 768px) {
