--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor.css
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateDescriptionSelectionStep.razor.css
@@ -13,3 +13,13 @@
     border-color: var(--border-Card);
     background-color: var(--card-background-color) !important;
 }
+
+.fieldset-title, ::deep .fieldset-title {
+    float: none !important;
+    width:inherit; /* Or auto */
+    padding:0 10px; /* To give a bit of padding on the left and right */
+    font-size: medium !important;
+    color: var(--rz-primary) !important;
+    background-color: var(--border-Card);
+    border-radius: 4px;
+}
