--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
@@ -18,7 +18,7 @@ else
             <RadzenFormField Text="Nome <span style='color:red'> (obbligatorio)</span>" Variant="@variant"
                 class="formFieldTitolo">
                 <ChildContent>
-                    <RadzenTextBox Name="Nome" @bind-Value="@Title" />
+                    <RadzenTextBox Name="Nome" @bind-Value="@CurrentTemplate.NameTemplate" />
                 </ChildContent>
                 <Helper>
                     <RadzenRequiredValidator @ref="@validator" Component="Nome" Popup=false Text="Il titolo è obbligatorio"  />
@@ -69,7 +69,7 @@ else
     
 
 
-    public async Task SaveTemplate()
+    @* public async Task SaveTemplate()
     {
         if (Title is not null && !string.IsNullOrEmpty(Title.Trim()))
         {
@@ -88,6 +88,6 @@ else
         {
             Title = null;
         }
-    }
+    } *@
 
 }
