aggiunta modifica e cancellazione alle tabelle mancanti + reso dinamico l'apparizione dei bottoni cancella e modifica del buttondropdown

--- a/ConstructionSiteLibrary/Components/Generics/ButtonDropdown.razor
+++ b/ConstructionSiteLibrary/Components/Generics/ButtonDropdown.razor
@@ -3,8 +3,14 @@
 <div class="dropdown" @onfocusout="@OnFocusOut">
     <RadzenButton Icon="more_vert" Click="@ToggleDropdown" class="buttonOptions" />
     <div id="myDropdown" class="dropdown-content @DropdownCssClass()">
-        <RadzenButton Icon="edit" Text="Modifica" Variant="Variant.Text" class="buttonEdit" @onmousedown="Modify" />
-        <RadzenButton Icon="delete" Text="Elimina " class="buttonDelete" Variant="Variant.Text" @onmousedown="Delete" />
+        @if (!DisableModify)
+        {
+            <RadzenButton Icon="edit" Text="Modifica" Variant="Variant.Text" class="buttonEdit" @onmousedown="Modify" />
+        }
+        @if (!DisableDelete)
+        {
+            <RadzenButton Icon="delete" Text="Elimina " class="buttonDelete" Variant="Variant.Text" @onmousedown="Delete" />
+        }
     </div>
 </div>
 
@@ -16,6 +22,10 @@
     public EventCallback<object> OnDeleteClicked { get; set; }
     [Parameter]
     public object Object { get; set; } = new();
+    [Parameter]
+    public bool DisableModify { get; set; }
+    [Parameter]
+    public bool DisableDelete { get; set; }
 
     private bool dropdownShow;
 
