Aggiornamento grafica documenti

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -15,7 +15,7 @@
 else
 {
     <meta name="viewport" content="width=@viewSize.Width">
-    <div class="card shadow DocumentCard">
+    <div class="">
         <ReportConstructorSiteDataSection Document="@document" />
         <CompaniesPresentSection Companies="@document.Companies" />
         <QuestionsSection Categories="document.Categories" Companies="document.Companies" OnStateChangeNotification="@UpdateDocument" />
