--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentNoteSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentNoteSection.razor
@@ -10,16 +10,11 @@
 
 
 @* NOTE AGGIUNTIVE *@
-<div class="vstack px-4">
-    <div class="my-4 ">
-        <div class="row SectionTitleDiv">
-            <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center" class="SectionTitle">
-                <strong>
-                    @DocumentCompilationUtils.DocumentNotes
-                </strong>
-            </RadzenText>
-        </div>
-        <div class=" my-4">
+<div class="mt-3">
+    <div class="marginYResponsive2 ">
+        <fieldset class="my-fieldset">
+            <legend class="my-legend">@DocumentCompilationUtils.DocumentNotes</legend>
+
             @foreach (var nota in Document.Notes)
             {
                 <RadzenColumn class="mt-4">
@@ -28,15 +23,15 @@
                         <div class="col-12">
                             <RadzenText TextStyle="TextStyle.Caption" class="mt-2">@ReportedCompany(nota.CompanyListIds)</RadzenText>
                             <RadzenButton Icon="edit" Text="Assegna" Variant="Variant.Text" Style="width:140px;"
-                                          Click="@(()=>OpenCompanyListDialog(nota))" />
+                                            Click="@(()=>OpenCompanyListDialog(nota))" />
                         </div>
                     </div>
                 </RadzenColumn>
             }
-            <div class="d-flex justify-content-center mt-2">
+            <div class="button-container">
                 <RadzenButton Icon="add" Text="Aggiungi note" Variant="Variant.Filled" Click="@AddNewNote" />
             </div>
-        </div>
+        </fieldset>
     </div>
 </div>
 
