--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionNotesSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionNotesSection.razor
@@ -5,32 +5,28 @@
 @if(NoteList.Count > 0)
 {
     @* NOTE AGGIUNTIVE *@
-    <div class="vstack documentSection">
+    <div class="mt-3">
         <div class="marginYResponsive2 ">
-            <div class="row SectionTitleDiv">
-                <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center" class="SectionTitle">
-                    <strong>
-                        @DocumentCompilationUtils.QuestionNotes
-                    </strong>
-                </RadzenText>
-            </div>
-            <div class="marginYResponsive">
-                @foreach (var elem in NoteList)
-                {
-                    <RadzenRow JustifyContent="@justifyContent" AlignItems="@alignItems" Gap="0">
-                        <RadzenColumn Size="1" class="rz-text-align-center paddingYResponsive">
-                            <RadzenText TextStyle="TextStyle.H6">@NotePointList[NoteList.IndexOf(elem)]</RadzenText>
-                        </RadzenColumn>
-                        <RadzenColumn>
-                            <div class="paddingYResponsive">
-                                <RadzenTextArea Rows="3" Style="width:100%" Value="@elem" />
-                                <div>
+             <fieldset class="my-fieldset">
+                <legend class="my-legend">@DocumentCompilationUtils.QuestionNotes</legend>
+                <div class="marginYResponsive">
+                    @foreach (var elem in NoteList)
+                    {
+                        <RadzenRow JustifyContent="@justifyContent" AlignItems="@alignItems" Gap="0">
+                            <RadzenColumn Size="1" class="rz-text-align-center paddingYResponsive">
+                                <RadzenText TextStyle="TextStyle.H6">@NotePointList[NoteList.IndexOf(elem)]</RadzenText>
+                            </RadzenColumn>
+                            <RadzenColumn>
+                                <div class="paddingYResponsive">
+                                    <RadzenTextArea Rows="3" Style="width:100%" Value="@elem" />
+                                    <div>
+                                    </div>
                                 </div>
-                            </div>
-                        </RadzenColumn>
-                    </RadzenRow>
-                }
-            </div>
+                            </RadzenColumn>
+                        </RadzenRow>
+                    }
+                </div>
+            </fieldset>
         </div>
     </div>
 }
