modifiche css per sistemare la grafica con il boostrap aggiornato

--- a/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
@@ -17,8 +17,8 @@ else
     <div class="mx-2 my-5">
         <SectionTitle PageTitle="Categorie" ButtonText="+ aggiungi categoria" SearchPlaceholder="Cerca categoria"
         OnButtonClicked="@OpenNewForm" OnSearchChanged="@SearchChanged" />
-    
-        <table class="table table-striped">
+
+        <table class="table table-sm table-striped">
             <thead>
                 <th scope="col">N.</th>
                 <th scope="col">Nome</th>
