--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -178,7 +178,7 @@ else
                         <div class="border paddingSezione">
                             <div class="margineDomande bordoDomanda">
                                 <div class="hstack ">
-                                    <RadzenText>@DocumentCompilationUtils.QuestionText(category, question.Text, question.Order)</RadzenText>
+                                    <RadzenText>@DocumentCompilationUtils.QuestionTextNumber(category, question.Text, question.Order)</RadzenText>
                                 </div>
                                 <ul>
                                 @foreach (var answer in question.CurrentChoices)
