--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -16,40 +16,20 @@
             @foreach (var visual in visualCategories)
             {
                 <div class="accordion-item">
-                    <h2 class="accordion-header mb-0">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="@ReturnCollapseTarget(visualCategories.IndexOf(visual), true)" aria-expanded="false" aria-controls="@ReturnCollapseTarget(visualCategories.IndexOf(visual))">
+                    <h2 class="mb-0">
+                        <button class="accordion-button titleCategory" type="button" data-bs-toggle="collapse" data-bs-target="@ReturnCollapseTarget(visualCategories.IndexOf(visual), true)" aria-expanded="false" aria-controls="@ReturnCollapseTarget(visualCategories.IndexOf(visual))">
                             @DocumentCompilationUtils.CategoryText(visual.Category)
                         </button>
                     </h2>
                     <div id="@ReturnCollapseTarget(visualCategories.IndexOf(visual))" class="accordion-collapse collapse show">
                         <div class="accordion-body">
-                            @* <div class="SectionTitleDiv">
-                                <RadzenRow Style="justify-content:space-between !important;">
-                                    <RadzenColumn Size="1" Style="display:flex">
-                                        <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;margin-top:0.5rem;">
-                                            <strong>@DocumentCompilationUtils.CategoryNumber(visual.Category)</strong>
-                                        </RadzenText>
-                                    </RadzenColumn>
-                                    <RadzenColumn Size="10" Style="display:flex;justify-content: center;">
-                                        <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"
-                                            Style="margin-left:1rem;margin-top:0.5rem;">
-                                            <strong>@DocumentCompilationUtils.CategoryText(visual.Category)</strong>
-                                        </RadzenText>
-                                    </RadzenColumn>
-                                    <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
-                                        <RadzenButton Icon="@DocumentCompilationUtils.AccordionIcon(visual)" Variant="Variant.Text"
-                                            Click="@(()=>DocumentCompilationUtils.ShowQuestions(visual))" />
-                                    </RadzenColumn>
-                                </RadzenRow>
-                            </div> *@
                             @if (visual.ShowQuestion)
                             {
                                 @foreach (var question in visual.Category.Questions)
                                 {
                                     <div class="row mt-3 border-bottom">
                                         <div class="col bor">
-                                            <RadzenText>@DocumentCompilationUtils.QuestionText(visual.Category, question.Text, question.Order)
-                                            </RadzenText>
+                                            <p><strong>@DocumentCompilationUtils.QuestionNumber(visual.Category, question.Order)</strong> @DocumentCompilationUtils.QuestionText(visual.Category, question.Text)</p>
                                         </div>
                                         <div class="col-md-auto">
                                             @foreach (var answer in question.CurrentChoices)
@@ -76,9 +56,7 @@
                                                     }
                                                 </div>
                                                 <div>
-                                                    <RadzenText TextStyle="TextStyle.Body1" onclick="@{
-                                        ()=>OpenCompanyListDialog(answer)
-                }">
+                                                    <RadzenText TextStyle="TextStyle.Body1" onclick="@{()=>OpenCompanyListDialog(answer) }">
                                                         @ReportedCompany(answer)</RadzenText>
                                                 </div>
                                             }
@@ -348,3 +326,24 @@
     #endregion
 
 }
+
+
+                                    @* <div class="SectionTitleDiv">
+                                <RadzenRow Style="justify-content:space-between !important;">
+                                    <RadzenColumn Size="1" Style="display:flex">
+                                        <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;margin-top:0.5rem;">
+                                            <strong>@DocumentCompilationUtils.CategoryNumber(visual.Category)</strong>
+                                        </RadzenText>
+                                    </RadzenColumn>
+                                    <RadzenColumn Size="10" Style="display:flex;justify-content: center;">
+                                        <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"
+                                            Style="margin-left:1rem;margin-top:0.5rem;">
+                                            <strong>@DocumentCompilationUtils.CategoryText(visual.Category)</strong>
+                                        </RadzenText>
+                                    </RadzenColumn>
+                                    <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
+                                        <RadzenButton Icon="@DocumentCompilationUtils.AccordionIcon(visual)" Variant="Variant.Text"
+                                            Click="@(()=>DocumentCompilationUtils.ShowQuestions(visual))" />
+                                    </RadzenColumn>
+                                </RadzenRow>
+                            </div> *@
