--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor.css
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor.css
@@ -1,4 +1,12 @@
-﻿.bordoInferiore, ::deep .bordoInferiore {
+﻿
+.titleCategory {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1;
+}
+
+
+.bordoInferiore, ::deep .bordoInferiore {
     border-bottom: 1px solid !important;
 }
 
