--- a/ConstructionSiteLibrary/Components/Utilities/Loading.razor
+++ b/ConstructionSiteLibrary/Components/Utilities/Loading.razor
@@ -29,7 +29,7 @@
         }
         else
         {
-            textSize = TextStyle.Subtitle1;
+            textSize = TextStyle.Body1;
             size = ProgressBarCircularSize.Medium;
         }
     }
