--- a/ConstructionSiteLibrary/wwwroot/css/app.css
+++ b/ConstructionSiteLibrary/wwwroot/css/app.css
@@ -9,11 +9,11 @@ html, body {
 /*TESTI STANDARD*/
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: var(--font) !important;
-    font-weight: 900 !important;
+    font-weight: 800 !important;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     color: var(--rz-primary) !important;
-    font-variation-settings: "wdth" 125 !important;
+    /*font-variation-settings: "wdth" 125 !important;*/
     line-height: 14px !important;
 }
 
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 h3, .h3 {
     font-weight: 300 !important;
-    font-variation-settings: "wdth" 112.5 !important;
+/*    font-variation-settings: "wdth" 112.5 !important;*/
     line-height: 130% !important;
 }
 
@@ -86,6 +86,59 @@ p,.p {
         background-color: var(--rz-primary) !important;
         color: white !important;
     }
+
+.table > :not(caption) > * > * {
+    padding: .5rem .5rem;
+    color: var(--bs-table-color-state, var(--bs-table-color-type, var(--bs-table-color)));
+    background-color: var( --page-background-color) !important;
+    border-bottom-width: var(--bs-border-width);
+    box-shadow: inset 0 0 0 9999px var(--bs-table-bg-state, var(--bs-table-bg-type, var(--bs-table-accent-bg)));
+}
+
+.table-striped > tbody > tr:nth-child(odd) > td,
+.table-striped > tbody > tr:nth-child(odd) > th {
+    background-color: var(--axt-table-striped-bg);
+}
+
+.table-striped > tbody > tr > td:not(:last-child),
+.table-striped > tbody > tr > th:not(:last-child) {
+    border-right: 1px solid #afcaf3;
+}
+
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+    /*    border-color: inherit;
+    border-style: solid;*/
+    border-width: 0;
+    color: var(--rz-primary);
+}
+
+    thead > tr > th {
+        font-size: 12px;
+        padding-left: 48px !important;
+        padding-right: 48px !important;
+        font-weight: normal;
+    }
+
+    tbody > tr > td {
+        font-size: 16px !important;
+        padding: 24px 48px !important;
+    }
+
+    tbody > tr {
+        height: 40px !important;
+    }
+
+/* ACCORDION BOOSTRAP */
+.accordion-button:focus {
+    z-index: 0; 
+    outline: 0; 
+    box-shadow: 0px var(--bs-accordion-btn-focus-box-shadow);
+}
 
 /* DIMENSIONI TESTI */
 
